// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MentorDetailsPage Free Coffee Chat Banner Logic Visual Regression Tests should match visual snapshot for mobile view with trial tip banner: mobile-trial-tip-banner 1`] = `
<div
  aria-live="polite"
  class="trialTipFixed"
  role="note"
>
  <span
    aria-hidden="true"
    class="trialTipIcon"
  >
    📣
  </span>
  <span
    class="trialTipText"
  >
    Book your free trial session!
  </span>
  <button
    aria-label="Dismiss"
    class="trialTipClose"
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`MentorDetailsPage Free Coffee Chat Banner Logic Visual Regression Tests should match visual snapshot for not signed-in user: mentor-details-not-signed-in 1`] = `
<div
  class="ant-card ant-card-bordered css-dev-only-do-not-override-240cud"
>
  <div
    class="ant-card-body"
  >
    <h4
      class="ant-typography css-dev-only-do-not-override-240cud"
    >
      Please sign in to book an appointment
    </h4>
    <button
      data-testid="signin-button"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-240cud ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          Sign In
        </span>
      </button>
    </button>
  </div>
</div>
`;

exports[`MentorDetailsPage Free Coffee Chat Banner Logic Visual Regression Tests should match visual snapshot for signed-in user with free coffee chat available: mentor-details-with-free-coffee-banner 1`] = `
<div
  data-testid="mentor-availability"
>
  <div
    data-testid="availability-component"
  >
    Mentor Availability Component
  </div>
  <div
    data-testid="mentor-availability-banner"
  >
    📣 Your first 15-min coffee chat is on us!
  </div>
</div>
`;

exports[`MentorDetailsPage Free Coffee Chat Banner Logic Visual Regression Tests should match visual snapshot for signed-in user with no free coffee chat: mentor-details-without-free-coffee-banner 1`] = `
<div
  data-testid="mentor-availability"
>
  <div
    data-testid="availability-component"
  >
    Mentor Availability Component
  </div>
</div>
`;
